UI, jwt rework, other changes
